navbar styles done

--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
                 <li class="main-header__item">
                   <a href="#" class="main-header__link"
                     >فرانت اند
+                    <i class="fas fa-angle-down main-header__link-icon"></i>
                     <ul class="main-header__dropdown">
                       <li class="main-header__dropdown-item">
                         <a href="#" class="main-header__dropdown-link"
@@ -103,6 +104,8 @@
                 <li class="main-header__item">
                   <a href="#" class="main-header__link"
                     >امنیت
+                    <i class="fas fa-angle-down main-header__link-icon"></i>
+
                     <ul class="main-header__dropdown">
                       <li class="main-header__dropdown-item">
                         <a href="#" class="main-header__dropdown-link"
@@ -135,6 +138,7 @@
                 <li class="main-header__item">
                   <a href="#" class="main-header__link"
                     >مقالات
+                    <i class="fas fa-angle-down main-header__link-icon"></i>
                     <ul class="main-header__dropdown">
                       <li class="main-header__dropdown-item">
                         <a href="#" class="main-header__dropdown-link"
@@ -167,6 +171,7 @@
                 <li class="main-header__item">
                   <a href="#" class="main-header__link"
                     >پایتون
+                    <i class="fas fa-angle-down main-header__link-icon"></i>
                     <ul class="main-header__dropdown">
                       <li class="main-header__dropdown-item">
                         <a href="#" class="main-header__dropdown-link"
