latest courses header

--- a/index.html
+++ b/index.html
@@ -285,6 +285,30 @@
     </section>
 
     <!-- finish landing -->
+
+    <!-- start latest courses -->
+    <div class="courses">
+      <div class="container">
+        <div class="courses-header">
+          <div class="courses-header__right">
+            <span class="courses-header__title"> جدیدترین دوره ها </span>
+            <span class="courses-header__text">
+              سکوی پرتاب شما به سمت موفقیت
+            </span>
+          </div>
+          <div class="courses-header__left">
+            <a href="#" class="courses-header__link">
+              تمامی دوره ها
+              <i class="fas fa-arrow-left courses-header__icon"></i>
+            </a>
+          </div>
+        </div>
+        <div class="courses-content"></div>
+      </div>
+    </div>
+
+    <!-- finish latest courses -->
+
     <script src="vendor/FontAwesome5/all.min.js"></script>
   </body>
 </html>
