--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>سبزلرن | صفحه اصلی</title>
     <link rel="stylesheet" href="css/reset.css" />
+    <link rel="stylesheet" href="vendor/BootStrap/bootstrap.min.css" />
     <link rel="stylesheet" href="vendor/FontAwesome5/all.min.css" />
     <link rel="stylesheet" href="css/index.css" />
   </head>
@@ -208,6 +209,7 @@
       </div>
     </header>
     <!-- finish header -->
+
     <!-- start landing -->
     <section class="landing">
       <div class="container">
@@ -283,7 +285,6 @@
         </div>
       </div>
     </section>
-
     <!-- finish landing -->
 
     <!-- start latest courses -->
@@ -291,7 +292,7 @@
       <div class="container">
         <div class="courses-header">
           <div class="courses-header__right">
-            <span class="courses-header__title"> جدیدترین دوره ها </span>
+            <span class="courses-header__title title"> جدیدترین دوره ها </span>
             <span class="courses-header__text">
               سکوی پرتاب شما به سمت موفقیت
             </span>
