--- a/index.html
+++ b/index.html
@@ -322,7 +322,9 @@
                     >
                     <div class="course-box__rating-teacher">
                       <div class="course-box__teacher">
-                        <i class="fas fa-teacher course-box__teacher-icon"></i>
+                        <i
+                          class="fas fa-chalkboard-teacher course-box__teacher-icon"
+                        ></i>
                         <a href="#" class="course-box__teacher-link"
                           >رضا دولتی</a
                         >
@@ -331,33 +333,33 @@
                         <img
                           src="images/svgs/star.svg"
                           alt="rating"
-                          class="course-box__start"
+                          class="course-box__star"
                         />
                         <img
                           src="images/svgs/star_fill.svg"
                           alt="rating"
-                          class="course-box__start"
+                          class="course-box__star"
                         />
                         <img
                           src="images/svgs/star_fill.svg"
                           alt="rating"
-                          class="course-box__start"
+                          class="course-box__star"
                         />
                         <img
                           src="images/svgs/star_fill.svg"
                           alt="rating"
-                          class="course-box__start"
+                          class="course-box__star"
                         />
                         <img
                           src="images/svgs/star_fill.svg"
                           alt="rating"
-                          class="course-box__start"
+                          class="course-box__star"
                         />
                       </div>
                     </div>
                     <div class="course-box__status">
                       <div class="course-box__users">
-                        <i class="fas fa-users course-box__users"></i>
+                        <i class="fas fa-users course-box__users-icon"></i>
                         <span class="course-box__users-text">500</span>
                       </div>
                       <span class="course-box__price">1,000,000</span>
@@ -375,7 +377,7 @@
                 <div class="course-box">
                   <a href="#">
                     <img
-                      src="images/courses/fareelancer.png"
+                      src="images/courses/jango.png"
                       alt="course img"
                       class="course-box__img"
                     />
@@ -386,7 +388,9 @@
                     >
                     <div class="course-box__rating-teacher">
                       <div class="course-box__teacher">
-                        <i class="fas fa-teacher course-box__teacher-icon"></i>
+                        <i
+                          class="fas fa-chalkboard-teacher course-box__teacher-icon"
+                        ></i>
                         <a href="#" class="course-box__teacher-link"
                           >رضا دولتی</a
                         >
@@ -395,33 +399,33 @@
                         <img
                           src="images/svgs/star.svg"
                           alt="rating"
-                          class="course-box__start"
+                          class="course-box__star"
                         />
                         <img
                           src="images/svgs/star_fill.svg"
                           alt="rating"
-                          class="course-box__start"
+                          class="course-box__star"
                         />
                         <img
                           src="images/svgs/star_fill.svg"
                           alt="rating"
-                          class="course-box__start"
+                          class="course-box__star"
                         />
                         <img
                           src="images/svgs/star_fill.svg"
                           alt="rating"
-                          class="course-box__start"
+                          class="course-box__star"
                         />
                         <img
                           src="images/svgs/star_fill.svg"
                           alt="rating"
-                          class="course-box__start"
+                          class="course-box__star"
                         />
                       </div>
                     </div>
                     <div class="course-box__status">
                       <div class="course-box__users">
-                        <i class="fas fa-users course-box__users"></i>
+                        <i class="fas fa-users course-box__users-icon"></i>
                         <span class="course-box__users-text">500</span>
                       </div>
                       <span class="course-box__price">1,000,000</span>
@@ -439,7 +443,7 @@
                 <div class="course-box">
                   <a href="#">
                     <img
-                      src="images/courses/fareelancer.png"
+                      src="images/courses/jango.png"
                       alt="course img"
                       class="course-box__img"
                     />
@@ -450,7 +454,9 @@
                     >
                     <div class="course-box__rating-teacher">
                       <div class="course-box__teacher">
-                        <i class="fas fa-teacher course-box__teacher-icon"></i>
+                        <i
+                          class="fas fa-chalkboard-teacher course-box__teacher-icon"
+                        ></i>
                         <a href="#" class="course-box__teacher-link"
                           >رضا دولتی</a
                         >
@@ -459,33 +465,231 @@
                         <img
                           src="images/svgs/star.svg"
                           alt="rating"
-                          class="course-box__start"
+                          class="course-box__star"
                         />
                         <img
                           src="images/svgs/star_fill.svg"
                           alt="rating"
-                          class="course-box__start"
+                          class="course-box__star"
                         />
                         <img
                           src="images/svgs/star_fill.svg"
                           alt="rating"
-                          class="course-box__start"
+                          class="course-box__star"
                         />
                         <img
                           src="images/svgs/star_fill.svg"
                           alt="rating"
-                          class="course-box__start"
+                          class="course-box__star"
                         />
                         <img
                           src="images/svgs/star_fill.svg"
                           alt="rating"
-                          class="course-box__start"
+                          class="course-box__star"
                         />
                       </div>
                     </div>
                     <div class="course-box__status">
                       <div class="course-box__users">
-                        <i class="fas fa-users course-box__users"></i>
+                        <i class="fas fa-users course-box__users-icon"></i>
+                        <span class="course-box__users-text">500</span>
+                      </div>
+                      <span class="course-box__price">1,000,000</span>
+                    </div>
+                  </div>
+                  <div class="course-box__footer">
+                    <a href="#" class="course-box__footer-link"
+                      >مشاهده اطلاعات
+                      <i class="fas fa-arrow-left course-box__footer-icon"></i>
+                    </a>
+                  </div>
+                </div>
+              </div>
+              <div class="col-4">
+                <div class="course-box">
+                  <a href="#">
+                    <img
+                      src="images/courses/nodejs.png"
+                      alt="course img"
+                      class="course-box__img"
+                    />
+                  </a>
+                  <div class="course-box__main">
+                    <a href="#" class="course-box__title"
+                      >دوره پروژه محور جنگو</a
+                    >
+                    <div class="course-box__rating-teacher">
+                      <div class="course-box__teacher">
+                        <i
+                          class="fas fa-chalkboard-teacher course-box__teacher-icon"
+                        ></i>
+                        <a href="#" class="course-box__teacher-link"
+                          >رضا دولتی</a
+                        >
+                      </div>
+                      <div class="course-box__rating">
+                        <img
+                          src="images/svgs/star.svg"
+                          alt="rating"
+                          class="course-box__star"
+                        />
+                        <img
+                          src="images/svgs/star_fill.svg"
+                          alt="rating"
+                          class="course-box__star"
+                        />
+                        <img
+                          src="images/svgs/star_fill.svg"
+                          alt="rating"
+                          class="course-box__star"
+                        />
+                        <img
+                          src="images/svgs/star_fill.svg"
+                          alt="rating"
+                          class="course-box__star"
+                        />
+                        <img
+                          src="images/svgs/star_fill.svg"
+                          alt="rating"
+                          class="course-box__star"
+                        />
+                      </div>
+                    </div>
+                    <div class="course-box__status">
+                      <div class="course-box__users">
+                        <i class="fas fa-users course-box__users-icon"></i>
+                        <span class="course-box__users-text">500</span>
+                      </div>
+                      <span class="course-box__price">1,000,000</span>
+                    </div>
+                  </div>
+                  <div class="course-box__footer">
+                    <a href="#" class="course-box__footer-link"
+                      >مشاهده اطلاعات
+                      <i class="fas fa-arrow-left course-box__footer-icon"></i>
+                    </a>
+                  </div>
+                </div>
+              </div>
+              <div class="col-4">
+                <div class="course-box">
+                  <a href="#">
+                    <img
+                      src="images/courses/python.png"
+                      alt="course img"
+                      class="course-box__img"
+                    />
+                  </a>
+                  <div class="course-box__main">
+                    <a href="#" class="course-box__title"
+                      >دوره پروژه محور جنگو</a
+                    >
+                    <div class="course-box__rating-teacher">
+                      <div class="course-box__teacher">
+                        <i
+                          class="fas fa-chalkboard-teacher course-box__teacher-icon"
+                        ></i>
+                        <a href="#" class="course-box__teacher-link"
+                          >رضا دولتی</a
+                        >
+                      </div>
+                      <div class="course-box__rating">
+                        <img
+                          src="images/svgs/star.svg"
+                          alt="rating"
+                          class="course-box__star"
+                        />
+                        <img
+                          src="images/svgs/star_fill.svg"
+                          alt="rating"
+                          class="course-box__star"
+                        />
+                        <img
+                          src="images/svgs/star_fill.svg"
+                          alt="rating"
+                          class="course-box__star"
+                        />
+                        <img
+                          src="images/svgs/star_fill.svg"
+                          alt="rating"
+                          class="course-box__star"
+                        />
+                        <img
+                          src="images/svgs/star_fill.svg"
+                          alt="rating"
+                          class="course-box__star"
+                        />
+                      </div>
+                    </div>
+                    <div class="course-box__status">
+                      <div class="course-box__users">
+                        <i class="fas fa-users course-box__users-icon"></i>
+                        <span class="course-box__users-text">500</span>
+                      </div>
+                      <span class="course-box__price">1,000,000</span>
+                    </div>
+                  </div>
+                  <div class="course-box__footer">
+                    <a href="#" class="course-box__footer-link"
+                      >مشاهده اطلاعات
+                      <i class="fas fa-arrow-left course-box__footer-icon"></i>
+                    </a>
+                  </div>
+                </div>
+              </div>
+              <div class="col-4">
+                <div class="course-box">
+                  <a href="#">
+                    <img
+                      src="images/courses/youtuber.png"
+                      alt="course img"
+                      class="course-box__img"
+                    />
+                  </a>
+                  <div class="course-box__main">
+                    <a href="#" class="course-box__title"
+                      >دوره پروژه محور جنگو</a
+                    >
+                    <div class="course-box__rating-teacher">
+                      <div class="course-box__teacher">
+                        <i
+                          class="fas fa-chalkboard-teacher course-box__teacher-icon"
+                        ></i>
+                        <a href="#" class="course-box__teacher-link"
+                          >رضا دولتی</a
+                        >
+                      </div>
+                      <div class="course-box__rating">
+                        <img
+                          src="images/svgs/star.svg"
+                          alt="rating"
+                          class="course-box__star"
+                        />
+                        <img
+                          src="images/svgs/star_fill.svg"
+                          alt="rating"
+                          class="course-box__star"
+                        />
+                        <img
+                          src="images/svgs/star_fill.svg"
+                          alt="rating"
+                          class="course-box__star"
+                        />
+                        <img
+                          src="images/svgs/star_fill.svg"
+                          alt="rating"
+                          class="course-box__star"
+                        />
+                        <img
+                          src="images/svgs/star_fill.svg"
+                          alt="rating"
+                          class="course-box__star"
+                        />
+                      </div>
+                    </div>
+                    <div class="course-box__status">
+                      <div class="course-box__users">
+                        <i class="fas fa-users course-box__users-icon"></i>
                         <span class="course-box__users-text">500</span>
                       </div>
                       <span class="course-box__price">1,000,000</span>
