--- a/index.html
+++ b/index.html
@@ -710,6 +710,20 @@
     </div>
 
     <!-- finish latest courses -->
+      
+    <!-- start about us -->
+    <div class="about-us">
+      <div class="container">
+        <div class="about-us__header">
+          <span class="about-us__title title">ما چه کمکی بهتون میکنیم؟</span>
+          <span class="about-us__subtitle">از اونجایی که آکادمی سبزلرن یک آکادمی خصوصی هست</span>
+        </div>
+      </div>
+    </div>
+
+
+
+    <!-- finish about us -->
 
     <script src="vendor/FontAwesome5/all.min.js"></script>
   </body>
