popular&pre-sell header created

--- a/index.html
+++ b/index.html
@@ -708,7 +708,6 @@
         </div>
       </div>
     </div>
-
     <!-- finish latest courses -->
 
     <!-- start about us -->
@@ -722,7 +721,6 @@
         </div>
         <div class="container">
           <div class="row">
-
             <div class="col-6">
               <div class="about-us__box">
                 <div class="about-us__box-right">
@@ -757,7 +755,8 @@
                 <div class="about-us__box-left">
                   <span class="about-us__box-title">دوره پولی و رایگان</span>
                   <span class="about-us__box-text"
-                    >براش مهم نیست،به مدرسینش حقوق میده تا نهایت کیفیت رو در پشتیبانی وآپدیت دوره ارائه بده</span
+                    >براش مهم نیست،به مدرسینش حقوق میده تا نهایت کیفیت رو در
+                    پشتیبانی وآپدیت دوره ارائه بده</span
                   >
                 </div>
               </div>
@@ -770,18 +769,47 @@
                 <div class="about-us__box-left">
                   <span class="about-us__box-title">اهمیت به کاربر</span>
                   <span class="about-us__box-text"
-                    >اولویت اول و آخر سبزلرن اهمیت به کاربر ها و رفع نیاز های آموزشی و رسوندن اونها به بازار کار هست</span
+                    >اولویت اول و آخر سبزلرن اهمیت به کاربر ها و رفع نیاز های
+                    آموزشی و رسوندن اونها به بازار کار هست</span
                   >
                 </div>
               </div>
             </div>
-
           </div>
         </div>
       </div>
     </div>
-
     <!-- finish about us -->
+
+    <!-- start popular courses -->
+    <div class="popular">
+      <div class="container">
+        <div class="popular__header">
+          <span class="popular__title title"> محبوب ترین دوره ها</span>
+        </div>
+      </div>
+    </div>
+    <!-- finish popular courses -->
+
+    <!-- start pre-sell courses -->
+    <div class="presell">
+      <div class="container">
+        <div class="presell__header">
+          <span class="presell__title title">دوره های درحال پیش فروش</span>
+        </div>
+      </div>
+    </div>
+    <!-- finish pre-sell courses -->
+
+
+
+
+
+
+
+
+
+
 
     <script src="vendor/FontAwesome5/all.min.js"></script>
   </body>
