--- a/index.html
+++ b/index.html
@@ -1344,6 +1344,156 @@
     </div>
     <!-- finish pre-sell courses -->
 
+    <!-- start articles  -->
+    <section class="article">
+      <div class="container">
+        <div class="article-header">
+          <div class="article-header__right">
+            <span class="article-header__title title"> جدیدترین مقاله ها </span>
+            <span class="article-header__text"> پیش به سوی ارتقای دانش</span>
+          </div>
+          <div class="article-header__left">
+            <a href="#" class="article-header__link">
+              تمامی مقاله ها
+              <i class="fas fa-arrow-left article-header__icon"></i>
+            </a>
+          </div>
+        </div>
+        <div class="article__content">
+          <div class="row">
+            <div class="col-4">
+              <div class="article-card">
+                <div class="article-card__header">
+                  <a href="#" class="article-card__link-img">
+                    <img src="images/blogs/1.jpg" class="article-card__img" alt="">
+                  </a>
+                </div>
+                <div class="article-card__content">
+                  <a href="#" class="article-card__link">
+                    نحوه نصب کتابخانه در پایتون | آموزش نصب کتابخانه در پایتون
+                  </a>
+                  <p class="article-card__text">
+                    زبان پایتون هم مانند دیگر زبان­های برنامه نویسی رایج، دارای کتابخانه های مختلفی برای تسریع...
+                  </p>
+                  <div class="article-card__btn">
+                    بیشتر بخوانید
+                  </div>
+
+                </div>
+              </div>
+            </div>
+            <div class="col-4">
+              <div class="article-card">
+                <div class="article-card__header">
+                  <a href="#" class="article-card__link-img">
+                    <img src="images/blogs/2.jpg" class="article-card__img" alt="">
+                  </a>
+                </div>
+                <div class="article-card__content">
+                  <a href="#" class="article-card__link">
+                    نحوه نصب کتابخانه در پایتون |آموزش نصب کتابخانه در پایتون
+                  </a>
+                  <p class="article-card__text">
+                    زبان پایتون هم مانند دیگر زبان­های برنامه نویسی رایج، دارای کتابخانه های مختلفی برای تسریع...
+                  </p>
+                  <div class="article-card__btn">
+                    بیشتر بخوانید
+                  </div>
+
+                </div>
+              </div>
+            </div>
+            <div class="col-4">
+              <div class="article-card">
+                <div class="article-card__header">
+                  <a href="#" class="article-card__link-img">
+                    <img src="images/blogs/3.jpg" class="article-card__img" alt="">
+                  </a>
+                </div>
+                <div class="article-card__content">
+                  <a href="#" class="article-card__link">
+                    نحوه نصب کتابخانه در پایتون |آموزش نصب کتابخانه در پایتون
+                  </a>
+                  <p class="article-card__text">
+                    زبان پایتون هم مانند دیگر زبان­های برنامه نویسی رایج، دارای کتابخانه های مختلفی برای تسریع...
+                  </p>
+                  <div class="article-card__btn">
+                    بیشتر بخوانید
+                  </div>
+
+                </div>
+              </div>
+            </div>
+            <div class="col-4">
+              <div class="article-card">
+                <div class="article-card__header">
+                  <a href="#" class="article-card__link-img">
+                    <img src="images/blogs/4.jpg" class="article-card__img" alt="">
+                  </a>
+                </div>
+                <div class="article-card__content">
+                  <a href="#" class="article-card__link">
+                    نحوه نصب کتابخانه در پایتون |آموزش نصب کتابخانه در پایتون
+                  </a>
+                  <p class="article-card__text">
+                    زبان پایتون هم مانند دیگر زبان­های برنامه نویسی رایج، دارای کتابخانه های مختلفی برای تسریع...
+                  </p>
+                  <div class="article-card__btn">
+                    بیشتر بخوانید
+                  </div>
+
+                </div>
+              </div>
+            </div>
+            <div class="col-4">
+              <div class="article-card">
+                <div class="article-card__header">
+                  <a href="#" class="article-card__link-img">
+                    <img src="images/blogs/5.jpg" class="article-card__img" alt="">
+                  </a>
+                </div>
+                <div class="article-card__content">
+                  <a href="#" class="article-card__link">
+                    نحوه نصب کتابخانه در پایتون |آموزش نصب کتابخانه در پایتون
+                  </a>
+                  <p class="article-card__text">
+                    زبان پایتون هم مانند دیگر زبان­های برنامه نویسی رایج، دارای کتابخانه های مختلفی برای تسریع...
+                  </p>
+                  <div class="article-card__btn">
+                    بیشتر بخوانید
+                  </div>
+
+                </div>
+              </div>
+            </div>
+            <div class="col-4">
+              <div class="article-card">
+                <div class="article-card__header">
+                  <a href="#" class="article-card__link-img">
+                    <img src="images/blogs/6.jpg" class="article-card__img" alt="">
+                  </a>
+                </div>
+                <div class="article-card__content">
+                  <a href="#" class="article-card__link">
+                    نحوه نصب کتابخانه در پایتون |آموزش نصب کتابخانه در پایتون
+                  </a>
+                  <p class="article-card__text">
+                    زبان پایتون هم مانند دیگر زبان­های برنامه نویسی رایج، دارای کتابخانه های مختلفی برای تسریع...
+                  </p>
+                  <div class="article-card__btn">
+                    بیشتر بخوانید
+                  </div>
+
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- finish articles  -->
+
     <script src="vendor/FontAwesome5/all.min.js"></script>
     <script src="vendor/swiperSlider/swiper.js"></script>
     <script src="js/slider.js"></script>
