--- a/index.html
+++ b/index.html
@@ -1365,7 +1365,11 @@
               <div class="article-card">
                 <div class="article-card__header">
                   <a href="#" class="article-card__link-img">
-                    <img src="images/blogs/1.jpg" class="article-card__img" alt="">
+                    <img
+                      src="images/blogs/1.jpg"
+                      class="article-card__img"
+                      alt=""
+                    />
                   </a>
                 </div>
                 <div class="article-card__content">
@@ -1373,12 +1377,10 @@
                     نحوه نصب کتابخانه در پایتون | آموزش نصب کتابخانه در پایتون
                   </a>
                   <p class="article-card__text">
-                    زبان پایتون هم مانند دیگر زبان­های برنامه نویسی رایج، دارای کتابخانه های مختلفی برای تسریع...
+                    زبان پایتون هم مانند دیگر زبان­های برنامه نویسی رایج، دارای
+                    کتابخانه های مختلفی برای تسریع...
                   </p>
-                  <div class="article-card__btn">
-                    بیشتر بخوانید
-                  </div>
-
+                  <div class="article-card__btn">بیشتر بخوانید</div>
                 </div>
               </div>
             </div>
@@ -1386,7 +1388,11 @@
               <div class="article-card">
                 <div class="article-card__header">
                   <a href="#" class="article-card__link-img">
-                    <img src="images/blogs/2.jpg" class="article-card__img" alt="">
+                    <img
+                      src="images/blogs/2.jpg"
+                      class="article-card__img"
+                      alt=""
+                    />
                   </a>
                 </div>
                 <div class="article-card__content">
@@ -1394,12 +1400,10 @@
                     نحوه نصب کتابخانه در پایتون |آموزش نصب کتابخانه در پایتون
                   </a>
                   <p class="article-card__text">
-                    زبان پایتون هم مانند دیگر زبان­های برنامه نویسی رایج، دارای کتابخانه های مختلفی برای تسریع...
+                    زبان پایتون هم مانند دیگر زبان­های برنامه نویسی رایج، دارای
+                    کتابخانه های مختلفی برای تسریع...
                   </p>
-                  <div class="article-card__btn">
-                    بیشتر بخوانید
-                  </div>
-
+                  <div class="article-card__btn">بیشتر بخوانید</div>
                 </div>
               </div>
             </div>
@@ -1407,7 +1411,11 @@
               <div class="article-card">
                 <div class="article-card__header">
                   <a href="#" class="article-card__link-img">
-                    <img src="images/blogs/3.jpg" class="article-card__img" alt="">
+                    <img
+                      src="images/blogs/3.jpg"
+                      class="article-card__img"
+                      alt=""
+                    />
                   </a>
                 </div>
                 <div class="article-card__content">
@@ -1415,12 +1423,10 @@
                     نحوه نصب کتابخانه در پایتون |آموزش نصب کتابخانه در پایتون
                   </a>
                   <p class="article-card__text">
-                    زبان پایتون هم مانند دیگر زبان­های برنامه نویسی رایج، دارای کتابخانه های مختلفی برای تسریع...
+                    زبان پایتون هم مانند دیگر زبان­های برنامه نویسی رایج، دارای
+                    کتابخانه های مختلفی برای تسریع...
                   </p>
-                  <div class="article-card__btn">
-                    بیشتر بخوانید
-                  </div>
-
+                  <div class="article-card__btn">بیشتر بخوانید</div>
                 </div>
               </div>
             </div>
@@ -1428,7 +1434,11 @@
               <div class="article-card">
                 <div class="article-card__header">
                   <a href="#" class="article-card__link-img">
-                    <img src="images/blogs/4.jpg" class="article-card__img" alt="">
+                    <img
+                      src="images/blogs/4.jpg"
+                      class="article-card__img"
+                      alt=""
+                    />
                   </a>
                 </div>
                 <div class="article-card__content">
@@ -1436,12 +1446,10 @@
                     نحوه نصب کتابخانه در پایتون |آموزش نصب کتابخانه در پایتون
                   </a>
                   <p class="article-card__text">
-                    زبان پایتون هم مانند دیگر زبان­های برنامه نویسی رایج، دارای کتابخانه های مختلفی برای تسریع...
+                    زبان پایتون هم مانند دیگر زبان­های برنامه نویسی رایج، دارای
+                    کتابخانه های مختلفی برای تسریع...
                   </p>
-                  <div class="article-card__btn">
-                    بیشتر بخوانید
-                  </div>
-
+                  <div class="article-card__btn">بیشتر بخوانید</div>
                 </div>
               </div>
             </div>
@@ -1449,7 +1457,11 @@
               <div class="article-card">
                 <div class="article-card__header">
                   <a href="#" class="article-card__link-img">
-                    <img src="images/blogs/5.jpg" class="article-card__img" alt="">
+                    <img
+                      src="images/blogs/5.jpg"
+                      class="article-card__img"
+                      alt=""
+                    />
                   </a>
                 </div>
                 <div class="article-card__content">
@@ -1457,12 +1469,10 @@
                     نحوه نصب کتابخانه در پایتون |آموزش نصب کتابخانه در پایتون
                   </a>
                   <p class="article-card__text">
-                    زبان پایتون هم مانند دیگر زبان­های برنامه نویسی رایج، دارای کتابخانه های مختلفی برای تسریع...
+                    زبان پایتون هم مانند دیگر زبان­های برنامه نویسی رایج، دارای
+                    کتابخانه های مختلفی برای تسریع...
                   </p>
-                  <div class="article-card__btn">
-                    بیشتر بخوانید
-                  </div>
-
+                  <div class="article-card__btn">بیشتر بخوانید</div>
                 </div>
               </div>
             </div>
@@ -1470,7 +1480,11 @@
               <div class="article-card">
                 <div class="article-card__header">
                   <a href="#" class="article-card__link-img">
-                    <img src="images/blogs/6.jpg" class="article-card__img" alt="">
+                    <img
+                      src="images/blogs/6.jpg"
+                      class="article-card__img"
+                      alt=""
+                    />
                   </a>
                 </div>
                 <div class="article-card__content">
@@ -1478,12 +1492,10 @@
                     نحوه نصب کتابخانه در پایتون |آموزش نصب کتابخانه در پایتون
                   </a>
                   <p class="article-card__text">
-                    زبان پایتون هم مانند دیگر زبان­های برنامه نویسی رایج، دارای کتابخانه های مختلفی برای تسریع...
+                    زبان پایتون هم مانند دیگر زبان­های برنامه نویسی رایج، دارای
+                    کتابخانه های مختلفی برای تسریع...
                   </p>
-                  <div class="article-card__btn">
-                    بیشتر بخوانید
-                  </div>
-
+                  <div class="article-card__btn">بیشتر بخوانید</div>
                 </div>
               </div>
             </div>
@@ -1491,8 +1503,85 @@
         </div>
       </div>
     </section>
-
     <!-- finish articles  -->
+    <!-- start footer -->
+    <footer class="footer">
+      <div class="container">
+        <div class="footer-widgets">
+          <div class="row">
+            <div class="col-4">
+              <div class="footer-widgets__item">
+                <span class="footer-widgets__title"> درباره ما </span>
+                <p class="footer-widgets__text">
+                  وقتی تازه شروع به یادگیری برنامه نویسی کردم. یکی از مشکلاتی که
+                  در فرآیند یادگیری داشتم، کمبود آموزش های خوب با پشتیبانی قابل
+                  قبول بود که باعث شد اون موقع تصمیم بگیرم اگر روزی توانایی مالی
+                  و فنی قابل قبولی داشتم یک وب سایت برای حل این مشکل راه اندازی
+                  کنم! و خب امروز آکادمی آموزش برنامه نویسی سبزلرن به عنوان یک
+                  آکادمی خصوصی فعالیت میکنه و این به این معنی هست که هر مدرسی
+                  اجازه تدریس در اون رو نداره و باید از فیلترینگ های خاص آکادمی
+                  سبزلرن رد شه! این به این معنی هست که ما برامون فن بیان و نحوه
+                  تعامل مدرس با دانشجو بسیار مهمه! ما در آکادمی سبزلرن تضمین
+                  پشتیبانی خوب و با کیفیت رو به شما میدیم . چرا که مدرسین وب
+                  سایت سبزلرن حتی برای پشتیبانی دوره های رایگان شون هم هزینه
+                  دریافت میکنند و متعهد هستند که هوای کاربر های عزیز رو داشته
+                  باشند !
+                </p>
+              </div>
+            </div>
+
+            <div class="col-4">
+              <div class="footer-widgets__item">
+                <span class="footer-widgets__title"> آخرین مطالب </span>
+                <div class="footer-widgets__links">
+                  <a href="#" class="footer-widgets__link"
+                    >نحوه نصب کتابخانه در پایتون | آموزش نصب کتابخانه پایتون</a
+                  >
+                  <a href="#" class="footer-widgets__link"
+                    >چگونه پایتون را آپدیت کنیم؟ | آموزش صفر تا صد آپدیت کردن
+                    پایتون</a
+                  >
+                  <a href="#" class="footer-widgets__link"
+                    >آموزش نصب پایتون ( Python ) در در مک، ویندوز و لینوکس | گام
+                    به گام و تصویری</a
+                  >
+                  <a href="#" class="footer-widgets__link"
+                    >بهترین فریم ورک های فرانت اند | 16 فریم ورک Front end بررسی
+                    معایب و مزایا</a
+                  >
+                  <a href="#" class="footer-widgets__link"
+                    >معرفی بهترین سایت آموزش جاوا اسکریپت [ تجربه محور ] + آموزش
+                    رایگان</a
+                  >
+                </div>
+              </div>
+            </div>
+
+            <div class="col-4">
+              <div class="footer-widgets__item">
+                <span class="footer-widgets__title">دسترسی سریع </span>
+                <div class="row">
+                  <div class="col-6">
+                    <a href="#" class="footer-widgets__link">آموزش HTML</a>
+                    <a href="#" class="footer-widgets__link">آموزش CSS</a>
+                    <a href="#" class="footer-widgets__link"
+                      >آموزش جاوا اسکریپت</a
+                    >
+                    <a href="#" class="footer-widgets__link">آموزش بوت استرپ</a>
+                    <a href="#" class="footer-widgets__link">آموزش ریکت</a>
+                    <a href="#" class="footer-widgets__link">آموزش پایتون</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="footer__copyright">
+        کلیه حقوق برای آکادمی آموزش برنامه نویسی سبز لرن محفوظ است.
+      </div>
+    </footer>
+    <!-- finish footer -->
 
     <script src="vendor/FontAwesome5/all.min.js"></script>
     <script src="vendor/swiperSlider/swiper.js"></script>
