--- a/index.html
+++ b/index.html
@@ -1504,6 +1504,7 @@
       </div>
     </section>
     <!-- finish articles  -->
+
     <!-- start footer -->
     <footer class="footer">
       <div class="container">
@@ -1563,12 +1564,22 @@
                 <div class="row">
                   <div class="col-6">
                     <a href="#" class="footer-widgets__link">آموزش HTML</a>
+                  </div>
+                  <div class="col-6">
                     <a href="#" class="footer-widgets__link">آموزش CSS</a>
+                  </div>
+                  <div class="col-6">
                     <a href="#" class="footer-widgets__link"
                       >آموزش جاوا اسکریپت</a
                     >
+                  </div>
+                  <div class="col-6">
                     <a href="#" class="footer-widgets__link">آموزش بوت استرپ</a>
+                  </div>
+                  <div class="col-6">
                     <a href="#" class="footer-widgets__link">آموزش ریکت</a>
+                  </div>
+                  <div class="col-6">
                     <a href="#" class="footer-widgets__link">آموزش پایتون</a>
                   </div>
                 </div>
@@ -1578,7 +1589,9 @@
         </div>
       </div>
       <div class="footer__copyright">
-        کلیه حقوق برای آکادمی آموزش برنامه نویسی سبز لرن محفوظ است.
+        <span class="footer__copyright-text">
+          <img src="images/logo/Logo.png" width="100" alt="">
+        </span>
       </div>
     </footer>
     <!-- finish footer -->
