courses pagination index created

--- a/category.html
+++ b/category.html
@@ -224,18 +224,30 @@
             </div>
 
             <div class="corses-top-bar__selection">
-                <span class="corses-top-bar__selection-title">مرتب سازی پیش فرض
-                    <i class="fas fa-angle-down corses-top-bar__selection-icon"></i>
-                </span>
-                <ul class="corses-top-bar__selection-list">
-                    <li class="corses-top-bar__selecion-item corses-top-bar__selecion-item--active">مرتب سازی پیش فرض</li>
-                    <li class="corses-top-bar__selecion-item">مرتب سازی براساس محبوبیت</li>
-                    <li class="corses-top-bar__selecion-item">مرتب سازی براساس آخرین</li>
-                    <li class="corses-top-bar__selecion-item">مرتب سازی براساس ارزانترین</li>
-                    <li class="corses-top-bar__selecion-item">مرتب سازی براساس گرانترین</li>
-                </ul>
+              <span class="corses-top-bar__selection-title"
+                >مرتب سازی پیش فرض
+                <i class="fas fa-angle-down corses-top-bar__selection-icon"></i>
+              </span>
+              <ul class="corses-top-bar__selection-list">
+                <li
+                  class="corses-top-bar__selecion-item corses-top-bar__selecion-item--active"
+                >
+                  مرتب سازی پیش فرض
+                </li>
+                <li class="corses-top-bar__selecion-item">
+                  مرتب سازی براساس محبوبیت
+                </li>
+                <li class="corses-top-bar__selecion-item">
+                  مرتب سازی براساس آخرین
+                </li>
+                <li class="corses-top-bar__selecion-item">
+                  مرتب سازی براساس ارزانترین
+                </li>
+                <li class="corses-top-bar__selecion-item">
+                  مرتب سازی براساس گرانترین
+                </li>
+              </ul>
             </div>
-            
           </div>
           <div class="corses-top-bar__left">
             <form action="#" class="corses-top-bar__form">
@@ -453,7 +465,30 @@
             </div>
           </div>
         </div>
-        <div class="courses-pagination"></div>
+
+        <div class="courses-pagination">
+          <ul class="courses__pagination-list">
+            <li class="courses__pagination-item">
+              <a href="#" class="courses__pagination-link">
+                <i class="fas fa-long-arrow-alt-right courses__pagination-icon"></i>
+              </a>
+            </li>
+            <li class="courses__pagination-item">
+              <a href="#" class="courses__pagination-link"> 1 </a>
+            </li>
+            <li class="courses__pagination-item">
+              <a href="#" class="courses__pagination-link"> 2 </a>
+            </li>
+            <li class="courses__pagination-item">
+              <a href="#" class="courses__pagination-link courses__pagination-link--active"> 3 </a>
+            </li>
+            <li class="courses__pagination-item">
+              <a href="#" class="courses__pagination-link">
+                <i class="fas fa-long-arrow-alt-left courses__pagination-icon"></i>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </section>
 
@@ -552,4 +587,3 @@
     <script src="vendor/FontAwesome5/all.min.js"></script>
   </body>
 </html>
- 
