courses main info html codes created

--- a/course.html
+++ b/course.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="vendor/BootStrap/bootstrap.min.css" />
     <link rel="stylesheet" href="vendor/FontAwesome5/all.min.css" />
     <link rel="stylesheet" href="vendor/swiperSlider/swiper.css" />
+    <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/course.css" />
   </head>
   <body>
@@ -209,6 +210,7 @@
       </div>
     </header>
     <!-- finish header -->
+
     <!-- Start Breadcrumb -->
     <section class="breadcrumb">
       <div class="container">
@@ -237,6 +239,50 @@
       </div>
     </section>
     <!-- finish Breadcrumb -->
+
+    <!-- Start course Main Info/ -->
+    <section class="course-info">
+      <div class="container">
+        <div class="row">
+          <div class="col-6">
+            <a href="#" class="course-info__link">
+              آموزش برنامه نویسی فرانت اند
+            </a>
+            <h1 class="course-info__title">
+              آموزش 20 کتابخانه جاوا اسکریپت برای بازار کار
+            </h1>
+            <p class="course-info__text">
+              امروزه کتابخانه‌ها کد نویسی را خیلی آسان و لذت بخش تر کرده اند. به
+              قدری که حتی امروزه هیچ شرکت برنامه نویسی پروژه های خود را با
+              Vanilla Js پیاده سازی نمی کند و همیشه از کتابخانه ها و فریمورک های
+              موجود استفاده می کند. پس شما هم اگه میخواید یک برنامه نویس عالی
+              فرانت اند باشید، باید کتابخانه های کاربردی که در بازار کار استفاده
+              می شوند را به خوبی بلد باشید
+            </p>
+            <div class="course-info__social-media">
+              <a href="#" class="course-info__social-media-item">
+                <i class="fab fa-telegram-plane course-info__icon"></i>
+              </a>
+              <a href="#" class="course-info__social-media-item">
+                <i class="fab fa-twitter course-info__icon"></i>
+              </a>
+              <a href="#" class="course-info__social-media-item">
+                <i class="fab fa-facebook-f course-info__icon"></i>
+              </a>
+            </div>
+          </div>
+          <div class="col-6">
+            <video
+              src=""
+              poster="images/courses/js_project.png"
+              class="course-info__video"
+              controls
+            ></video>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- finish course Main Info/ -->
 
     <!-- start footer -->
     <footer class="footer">
