course boxes styled

--- a/course.html
+++ b/course.html
@@ -295,7 +295,10 @@
                   <div class="col-4">
                     <div class="course-boxes_box">
                       <div class="course-boxes__box-right">
-                        <i class="fas fa-graduation-cap"> </i>
+                        <i
+                          class="course_boxes__box-right-icon fas fa-graduation-cap"
+                        >
+                        </i>
                       </div>
                       <div class="course-boxes__box-left">
                         <span class="course-boxes__box-left-title"
@@ -310,7 +313,8 @@
                   <div class="col-4">
                     <div class="course-boxes_box">
                       <div class="course-boxes__box-right">
-                        <i class="fas fa-clock"> </i>
+                        <i class="course_boxes__box-right-icon fas fa-clock">
+                        </i>
                       </div>
                       <div class="course-boxes__box-left">
                         <span class="course-boxes__box-left-title">
@@ -325,7 +329,10 @@
                   <div class="col-4">
                     <div class="course-boxes_box">
                       <div class="course-boxes__box-right">
-                        <i class="fas fa-calendar-alt"> </i>
+                        <i
+                          class="course_boxes__box-right-icon fas fa-calendar-alt"
+                        >
+                        </i>
                       </div>
                       <div class="course-boxes__box-left">
                         <span class="course-boxes__box-left-title">
@@ -340,7 +347,8 @@
                   <div class="col-4">
                     <div class="course-boxes_box">
                       <div class="course-boxes__box-right">
-                        <i class="fas fa-user-alt"> </i>
+                        <i class="course_boxes__box-right-icon fas fa-user-alt">
+                        </i>
                       </div>
                       <div class="course-boxes__box-left">
                         <span class="course-boxes__box-left-title">
@@ -355,7 +363,10 @@
                   <div class="col-4">
                     <div class="course-boxes_box">
                       <div class="course-boxes__box-right">
-                        <i class="fas fa-info-circle"> </i>
+                        <i
+                          class="course_boxes__box-right-icon fas fa-info-circle"
+                        >
+                        </i>
                       </div>
                       <div class="course-boxes__box-left">
                         <span class="course-boxes__box-left-title">
@@ -370,7 +381,8 @@
                   <div class="col-4">
                     <div class="course-boxes_box">
                       <div class="course-boxes__box-right">
-                        <i class="fas fa-play"> </i>
+                        <i class="course_boxes__box-right-icon fas fa-play">
+                        </i>
                       </div>
                       <div class="course-boxes__box-left">
                         <span class="course-boxes__box-left-title">
