introduction index created

--- a/course.html
+++ b/course.html
@@ -407,12 +407,98 @@
                     درصد پیشرفت دوره: 100%
                   </span>
                 </div>
-                <div class="progress course-progress__bar" role="progressbar" aria-label="Animated striped example" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
-                  <div class="progress-bar progress-bar-striped progress-bar-animated" style="width: 75%"></div>
+                <div
+                  class="progress course-progress__bar"
+                  role="progressbar"
+                  aria-label="Animated striped example"
+                  aria-valuenow="75"
+                  aria-valuemin="0"
+                  aria-valuemax="100"
+                >
+                  <div
+                    class="progress-bar progress-bar-striped progress-bar-animated"
+                    style="width: 75%"
+                  ></div>
                 </div>
               </div>
 
               <!-- finish course progress -->
+
+              <!-- Start Introduction -->
+              <div class="introduction">
+                <div class="introduction__item">
+                  <span class="introduction__title title">
+                    آموزش 20کتابخانه جاوا اسکریپت بازار کار
+                  </span>
+                  <img
+                    src="images/info/1.gif"
+                    alt="course info img"
+                    class="introduction__img img-fluid"
+                  />
+                  <p class="introduction__text">
+                    شما اگر این دوره رو خوب ببینید و خوب تمرین کنید، بعد از دوره
+                    قطعا میتونید هر پروژه ای با هر سطح سختی که باشه رو مدیریت و
+                    پیاده سازی کنید و دیگه در انجام پروژه احساس سردرگمی و کمبود
+                    دانش نخواهید کرد. در پیاده سازی پروژه های بزرگ مشکل دارید و
+                    نمیدونید از کجا شروع کنید و پروژه رو کجا تموم کنید.
+                  </p>
+                  <p class="introduction__text">
+                    قصد دارید مطالبی که در html ,css ,javascript آموزش دیدید رو
+                    مرور کنید و با کاربرد عملی اون ها در پروژه های واقعی آشنا
+                    بشید. با کاربرد عملی اون ها در پروژه های واقعی آشنا بشید.
+                  </p>
+                </div>
+                <div class="introduction__item">
+                  <span class="introduction__title title">
+                    هدف از این دوره چیه؟
+                  </span>
+                  <img
+                    src="images/info/2.jpg"
+                    alt="course info img"
+                    class="introduction__img img-fluid"
+                  />
+                  <p class="introduction__text">
+                    شما اگر این دوره رو خوب ببینید و خوب تمرین کنید، بعد از دوره
+                    قطعا میتونید هر پروژه ای با هر سطح سختی که باشه رو مدیریت و
+                    پیاده سازی کنید و دیگه در انجام پروژه احساس سردرگمی و کمبود
+                    دانش نخواهید کرد. در پیاده سازی پروژه های بزرگ مشکل دارید و
+                    نمیدونید از کجا شروع کنید و پروژه رو کجا تموم کنید.
+                  </p>
+                  <p class="introduction__text">
+                    این دوره دقیقا برای شما تولید شده تا به اهداف خودتون برسید.
+                    در واقع با ساختار و محتوایی که در دوره خواهید دید متوجه
+                    میشید که یکی دوسال از زمان رو برای شما میخره و بدون اینکه
+                    نیاز به آزمون و خطا و دردسرهای اون باشه
+                  </p>
+                  <p class="introduction__text">
+                    این دوره دقیقا برای شما تولید شده تا به اهداف خودتون برسید.
+                    در واقع با ساختار و محتوایی که در دوره خواهید دید متوجه
+                    میشید که یکی دوسال از زمان رو برای شما میخره و بدون اینکه
+                    نیاز به آزمون و خطا و دردسرهای اون باشه
+                  </p>
+                  <p class="introduction__text">
+                    این دوره دقیقا برای شما تولید شده تا به اهداف خودتون برسید.
+                    در واقع با ساختار و محتوایی که در دوره خواهید دید متوجه
+                    میشید که یکی دوسال از زمان رو برای شما میخره و بدون اینکه
+                    نیاز به آزمون و خطا و دردسرهای اون باشه
+                  </p>
+                  <p class="introduction__text">
+                    این دوره دقیقا برای شما تولید شده تا به اهداف خودتون برسید.
+                    در واقع با ساختار و محتوایی که در دوره خواهید دید متوجه
+                    میشید که یکی دوسال از زمان رو برای شما میخره و بدون اینکه
+                    نیاز به آزمون و خطا و دردسرهای اون باشه
+                  </p>
+                </div>
+                <div class="introduction__btns">
+                  <a href="#" class="introduction__btns-item"
+                    >دانلود همگانی ویدئوها</a
+                  >
+                  <a href="#" class="introduction__btns-item"
+                    >دانلود همگانی پیوست ها</a
+                  >
+                </div>
+              </div>
+              <!-- finish Introduction -->
             </div>
           </div>
 
