teacher details index wrote

--- a/course.html
+++ b/course.html
@@ -522,7 +522,9 @@
                         >
                           <div class="introduction__accordion-right">
                             <span class="introduction__accordion-count">1</span>
-                            <i class="fab fa-youtube introduction__accordion-icon"></i>
+                            <i
+                              class="fab fa-youtube introduction__accordion-icon"
+                            ></i>
                             <a href="#" class="introduction__accordion-link">
                               معرفی دوره+ چرا یادگیری کتابخانه ها ضروری است؟
                             </a>
@@ -552,7 +554,7 @@
                       </h2>
                       <div
                         id="collapsetwo"
-                        class="accordion-collapse collapse "
+                        class="accordion-collapse collapse"
                         data-bs-parent="#accordionExample"
                       >
                         <div
@@ -560,7 +562,9 @@
                         >
                           <div class="introduction__accordion-right">
                             <span class="introduction__accordion-count">1</span>
-                            <i class="fab fa-youtube introduction__accordion-icon"></i>
+                            <i
+                              class="fab fa-youtube introduction__accordion-icon"
+                            ></i>
                             <a href="#" class="introduction__accordion-link">
                               معرفی دوره+ چرا یادگیری کتابخانه ها ضروری است؟
                             </a>
@@ -577,6 +581,41 @@
                 </div>
               </div>
               <!-- finish Introduction -->
+
+              <!-- Start Teacher Details -->
+              <div class="teacher-details">
+                <div class="teacher-details__header">
+                  <div class="teacher-details__header-right">
+                    <img
+                      src="images/info/teacher.jfif"
+                      alt=""
+                      class="teacher-details__header-img"
+                    />
+                    <div class="teacher-details__header-titles">
+                      <a href="#" class="teacher-details__header-link"
+                        >some one</a
+                      >
+                      <span class="teacher-details__header-skill"
+                        >frontend & backend Developer</span
+                      >
+                    </div>
+                  </div>
+                  <div class="teacher-details__header-left">
+                    <i
+                      class="fas fa-chalkboard-teacher teacher-details__header-icon"
+                    ></i>
+                    <span class="teacher-details__header-name"> مدرس </span>
+                  </div>
+                </div>
+                <div class="teacher-details__footer">
+                  اگر روزی توانایی مالی و فنی قابل قبولی داشتم یک وب سایت برای
+                  حل این مشکل راه اندازی کنم! و خب امروز آکادمی آموزش برنامه
+                  نویسی سبزلرن به عنوان یک آکادمی خصوصی فعالیت میکنه و این به
+                  این معنی هست که هر مدرس . چرا که مدرسین وب سایت سبزلرن
+                </div>
+              </div>
+
+              <!-- finish Teacher Details -->
             </div>
           </div>
 
