--- a/course.html
+++ b/course.html
@@ -619,7 +619,24 @@
             </div>
           </div>
 
-          <div class="col-4"></div>
+          <div class="col-4">
+            <div class="courses-info">
+              <div class="course-info">
+                <div class="course-info__register">
+                  <span class="course-info__register-title">
+                    <i
+                      class="fas fa-graduation-cap course-info__register-icon"
+                    ></i>
+                    شما دانشجوی دوره هستید
+                  </span>
+                </div>
+              </div>
+              <div class="course-info"></div>
+              <div class="course-info"></div>
+              <div class="course-info"></div>
+              <div class="course-info"></div>
+            </div>
+          </div>
         </div>
       </div>
     </main>
