course info total styled

--- a/course.html
+++ b/course.html
@@ -656,7 +656,7 @@
                     <div class="course-info__total-view">
                       <i class="far fa-eye course-info__total-view-icon"></i>
                       <span class="course-info__total-view-text">
-                        67 دیدگاه
+                        132454 بازدید
                       </span>
                     </div>
                   </div>
