course info topic designed

--- a/course.html
+++ b/course.html
@@ -665,15 +665,20 @@
               <div class="course-info">
                 <div class="course-info__header-short-url">
                   <i class="fas fa-link course-info__short-url-icon"></i>
-                  <span class="course-info__short-url-text">
-                    لینک کوتاه
-                  </span>
+                  <span class="course-info__short-url-text"> لینک کوتاه </span>
                 </div>
                 <span class="course-info__short-url">
                   https://sabzlearn.ir/?p=117472
                 </span>
               </div>
-              <div class="course-info"></div>
+              <div class="course-info">
+                <span class="course-info__topic-title"> سرفصل های دوره </span>
+                <span class="course-info__topic-text">
+                  برای مشاهده و یا دانلود روی کلمه
+                  <a href="#" style="color: rgb(80, 80, 244); font-weight: bold">لینک</a>
+                  کلیک کنید
+                </span>
+              </div>
               <div class="course-info"></div>
             </div>
           </div>
