course info related courses html template wrote

--- a/course.html
+++ b/course.html
@@ -675,11 +675,65 @@
                 <span class="course-info__topic-title"> سرفصل های دوره </span>
                 <span class="course-info__topic-text">
                   برای مشاهده و یا دانلود روی کلمه
-                  <a href="#" style="color: rgb(80, 80, 244); font-weight: bold">لینک</a>
+                  <a href="#" style="color: rgb(80, 80, 244); font-weight: bold"
+                    >لینک</a
+                  >
                   کلیک کنید
                 </span>
               </div>
-              <div class="course-info"></div>
+              <div class="course-info">
+                <span class="course-info__courses-title">محصولات مرتبط</span>
+                <ul class="course-info__courses-list">
+                  <li class="course-info__courses-list-item">
+                    <a href="#" class="course-info__courses-link">
+                      <img
+                        src="images/courses/jango.png"
+                        alt="course cover"
+                        class="course-info__courses-img"
+                      />
+                      <span class="course-info__courses-text">
+                        پروژه های جنگو
+                      </span>
+                    </a>
+                  </li>
+                  <li class="course-info__courses-list-item">
+                    <a href="#" class="course-info__courses-link">
+                      <img
+                        src="images/courses/nodejs.png"
+                        alt="course cover"
+                        class="course-info__courses-img"
+                      />
+                      <span class="course-info__courses-text">
+                        پروژه های نود جی اس
+                      </span>
+                    </a>
+                  </li>
+                  <li class="course-info__courses-list-item">
+                    <a href="#" class="course-info__courses-link">
+                      <img
+                        src="images/courses/python.png"
+                        alt="course cover"
+                        class="course-info__courses-img"
+                      />
+                      <span class="course-info__courses-text">
+                        پروژه های پایتون
+                      </span>
+                    </a>
+                  </li>
+                  <li class="course-info__courses-list-item">
+                    <a href="#" class="course-info__courses-link">
+                      <img
+                        src="images/courses/youtuber.png"
+                        alt="course cover"
+                        class="course-info__courses-img"
+                      />
+                      <span class="course-info__courses-text">
+                        پروژه های یوتیوبر
+                      </span>
+                    </a>
+                  </li>
+                </ul>
+              </div>
             </div>
           </div>
         </div>
