quick access designed

--- a/blog.html
+++ b/blog.html
@@ -250,7 +250,9 @@
           <div class="col-4">
             <div class="courses-info">
               <div class="course-info">
-                <span class="course-info__courses-title">پر امتیازترین محصولات</span>
+                <span class="course-info__courses-title"
+                  >پر امتیازترین محصولات</span
+                >
                 <ul class="course-info__courses-list">
                   <li class="course-info__courses-list-item">
                     <a href="#" class="course-info__courses-link">
@@ -299,6 +301,34 @@
                         پروژه های یوتیوبر
                       </span>
                     </a>
+                  </li>
+                </ul>
+              </div>
+
+              <div class="course-info">
+                <span class="course-info__courses-title"> دسترسی سریع </span>
+                <ul class="sidebar-articles__list">
+                  <li class="sidebar-articlles__item">
+                    <i class="fas fa-angle-left sidebar-articlles__icon"></i>
+                    <a href="#" class="sidebar-articlles__link"> صفحه اصلی </a>
+                  </li>
+                  <li class="sidebar-articlles__item">
+                    <i class="fas fa-angle-left sidebar-articlles__icon"></i>
+                    <a href="#" class="sidebar-articlles__link"> فرانت اند </a>
+                  </li>
+                  <li class="sidebar-articlles__item">
+                    <i class="fas fa-angle-left sidebar-articlles__icon"></i>
+                    <a href="#" class="sidebar-articlles__link"> امنیت </a>
+                  </li>
+                  <li class="sidebar-articlles__item">
+                    <i class="fas fa-angle-left sidebar-articlles__icon"></i>
+                    <a href="#" class="sidebar-articlles__link">
+                      مهارتهای نرم
+                    </a>
+                  </li>
+                  <li class="sidebar-articlles__item">
+                    <i class="fas fa-angle-left sidebar-articlles__icon"></i>
+                    <a href="#" class="sidebar-articlles__link"> پایتون </a>
                   </li>
                 </ul>
               </div>
