side bar finished

--- a/blog.html
+++ b/blog.html
@@ -368,6 +368,62 @@
                   </li>
                 </ul>
               </div>
+
+              <div class="course-info">
+                <span class="course-info__courses-title"> دسته بندی مقالات </span>
+                <ul class="sidebar-articles__list">
+                  <li class="sidebar-articlles__item">
+                    <i class="fas fa-angle-left sidebar-articlles__icon"></i>
+                    <a href="#" class="sidebar-articlles__link"> صفحه اصلی </a>
+                  </li>
+                  <li class="sidebar-articlles__item">
+                    <i class="fas fa-angle-left sidebar-articlles__icon"></i>
+                    <a href="#" class="sidebar-articlles__link"> فرانت اند </a>
+                  </li>
+                  <li class="sidebar-articlles__item">
+                    <i class="fas fa-angle-left sidebar-articlles__icon"></i>
+                    <a href="#" class="sidebar-articlles__link"> امنیت </a>
+                  </li>
+                  <li class="sidebar-articlles__item">
+                    <i class="fas fa-angle-left sidebar-articlles__icon"></i>
+                    <a href="#" class="sidebar-articlles__link">
+                      مهارتهای نرم
+                    </a>
+                  </li>
+                  <li class="sidebar-articlles__item">
+                    <i class="fas fa-angle-left sidebar-articlles__icon"></i>
+                    <a href="#" class="sidebar-articlles__link"> پایتون </a>
+                  </li>
+                </ul>
+              </div>
+              <div class="course-info">
+                <span class="course-info__courses-title"> دوره های جدید </span>
+                <ul class="sidebar-articles__list">
+                  <li class="sidebar-articlles__item">
+                    <i class="fas fa-angle-left sidebar-articlles__icon"></i>
+                    <a href="#" class="sidebar-articlles__link"> صفحه اصلی </a>
+                  </li>
+                  <li class="sidebar-articlles__item">
+                    <i class="fas fa-angle-left sidebar-articlles__icon"></i>
+                    <a href="#" class="sidebar-articlles__link"> فرانت اند </a>
+                  </li>
+                  <li class="sidebar-articlles__item">
+                    <i class="fas fa-angle-left sidebar-articlles__icon"></i>
+                    <a href="#" class="sidebar-articlles__link"> امنیت </a>
+                  </li>
+                  <li class="sidebar-articlles__item">
+                    <i class="fas fa-angle-left sidebar-articlles__icon"></i>
+                    <a href="#" class="sidebar-articlles__link">
+                      مهارتهای نرم
+                    </a>
+                  </li>
+                  <li class="sidebar-articlles__item">
+                    <i class="fas fa-angle-left sidebar-articlles__icon"></i>
+                    <a href="#" class="sidebar-articlles__link"> پایتون </a>
+                  </li>
+                </ul>
+              </div>
+
             </div>
           </div>
         </div>
