article header html template created

--- a/blog.html
+++ b/blog.html
@@ -245,7 +245,35 @@
     <main class="main">
       <div class="container">
         <div class="row">
-          <div class="col-8"></div>
+          <div class="col-8">
+            <div class="article">
+              <h1 class="article__titile">
+                معرفی بهترین سایت آموزش جاوا اسکریپت [تجربه محور]
+              </h1>
+              <div class="article__header">
+                <div class="article-header__category article-header__item">
+                  <i class="far fa-folder article-header__icon"></i>
+                  <a href="#" class="article-header__text">جاوا اسکریپت</a>
+                </div>
+                <div class="article-header__category article-header__item">
+                  <i class="far fa-user article-header__icon"></i>
+                  <a href="#" class="article-header__text"
+                    >ارسال شده توسط قدیر</a
+                  >
+                </div>
+                <div class="article-header__category article-header__item">
+                  <i class="far fa-clock article-header__icon"></i>
+                  <a href="#" class="article-header__text">1402/09/12</a>
+                </div>
+                <div class="article-header__category article-header__item">
+                  <i class="far fa-eye article-header__icon"></i>
+                  <a href="#" class="article-header__text">2,154بازدید</a>
+                </div>
+              </div>
+
+              <img src="images/blogs/1.jpg" alt="">
+            </div>
+          </div>
 
           <div class="col-4">
             <div class="courses-info">
@@ -370,7 +398,9 @@
               </div>
 
               <div class="course-info">
-                <span class="course-info__courses-title"> دسته بندی مقالات </span>
+                <span class="course-info__courses-title">
+                  دسته بندی مقالات
+                </span>
                 <ul class="sidebar-articles__list">
                   <li class="sidebar-articlles__item">
                     <i class="fas fa-angle-left sidebar-articlles__icon"></i>
@@ -423,7 +453,6 @@
                   </li>
                 </ul>
               </div>
-
             </div>
           </div>
         </div>
