main info header of blog styled

--- a/blog.html
+++ b/blog.html
@@ -247,7 +247,7 @@
         <div class="row">
           <div class="col-8">
             <div class="article">
-              <h1 class="article__titile">
+              <h1 class="article__title">
                 معرفی بهترین سایت آموزش جاوا اسکریپت [تجربه محور]
               </h1>
               <div class="article__header">
@@ -257,21 +257,21 @@
                 </div>
                 <div class="article-header__category article-header__item">
                   <i class="far fa-user article-header__icon"></i>
-                  <a href="#" class="article-header__text"
-                    >ارسال شده توسط قدیر</a
-                  >
+                  <span class="article-header__text">
+                    ارسال شده توسط قدیر
+                  </span>
                 </div>
                 <div class="article-header__category article-header__item">
                   <i class="far fa-clock article-header__icon"></i>
-                  <a href="#" class="article-header__text">1402/09/12</a>
+                  <span class="article-header__text"> 1402/09/12</span>
                 </div>
                 <div class="article-header__category article-header__item">
                   <i class="far fa-eye article-header__icon"></i>
-                  <a href="#" class="article-header__text">2,154بازدید</a>
+                  <span class="article-header__text"> 2,154بازدید</span>
                 </div>
               </div>
 
-              <img src="images/blogs/1.jpg" alt="">
+              <img src="images/blogs/1.jpg" alt="article-cover" class="article__banner"/>
             </div>
           </div>
 
